Backend part of personal schedule
