# backend/doc/doc/swagger.json
@@ -89,7 +89,6 @@
                 }
             }
         },
-<<<<<<< HEAD
         "/events": {
             "get": {
                 "tags": [ "Events" ],
@@ -173,6 +172,27 @@
                         "description": "The requested event could not be found.",
                         "schema": {
                             "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Unhandeled error.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/favors": {
+            "get": {
+                "tags": [ "Favors" ],
+                "summary": "Retrieve all personal events.",
+                "description": "",
+                "responses": {
+                    "200": {
+                        "description": "List of all personal events.",
+                        "schema": {
+                            "$ref": "#/definitions/EventList"
                         }
                     },
                     "500": {
